--- a/templates/exim4/exim4.conf
+++ b/templates/exim4/exim4.conf
@@ -315,7 +315,9 @@ warn  message = This message is marked as SPAM by the Anti-Spam System. Spam-sco
       condition = ${if < {$message_size}{20m} }
       condition = ${if > {$spam_score_int}{39}{1}{0}}
 
-# DKIM GOES HERE
+DKIM_FILE                       = /opt/afterlogic/etc/ssl-certs/dk.key
+DKIM_PRIVATE_KEY                = ${if exists{DKIM_FILE}{DKIM_FILE}{0}}
+DKIM_DOMAIN = ${lc:${domain:$h_from:}}
 
 # deny  message = DKIM Header isn't good
 #       condition = ${if match{${lookup dkim{$sender_address_domain}}}{bad}{1}{0}}
